--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 
     <!-- Section 5: Golf -->
     <section class="about" id="golf">
-        <div class="cap">Golf</div>
+        <div class="cap" style="margin-top: 10px;">Golf</div>
         
         <div class="video-card">
             <p class="video-card-text">
@@ -1056,4 +1056,5 @@ Last week I just completed my first week on IFP (International Foundation Progra
         });
     </script>
 </body>
+
 </html>
