--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
     <section class="about" id="golf">
         <div class="cap" >Golf</div>
         
-        <div class="video-card" style="margin:0px;">
+        <div class="video-card">
             <p class="video-card-text">
                 I was first introduced to golf at the age of 13 by my father’s cousin. I caddied for him for one round, really liked it, and took a golf lesson that same day. Unfortunately, just as I was getting started, the Coronavirus pandemic began, so I couldn't start playing seriously until I was 15. Once I started, I took a lot of lessons and practiced constantly. By the age of 18, I had reached a 9.0 handicap (HCP).
                 I won several tournaments, including four U18 TGF (Turkish Golf Federation) tournaments and the Kassis U18 Golf Club Championship. Additionally, I placed third in the U18 US KIDS. This is one of the most well-known junior tournaments; a lot of professionals played in it when they were young, including 4-time major champion Scottie Scheffler. Finally, I was invited to the national team tryouts, but I just missed my chance, finishing three places short.
@@ -1058,5 +1058,6 @@ Last week I just completed my first week on IFP (International Foundation Progra
 </body>
 
 </html>
+
 
 
