--- a/index.html
+++ b/index.html
@@ -790,6 +790,7 @@
     <!-- Footer -->
     <div class="footer">
         <p>&copy; 2025 Eren.com. All Rights Reserved.</p>
+        <p>Design by Eren Delituna</p>
     </div>
 
     <!-- MODALS -->
@@ -1061,6 +1062,7 @@ Last week I just completed my first week on IFP (International Foundation Progra
 </body>
 
 </html>
+
 
 
 
