--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
             color: #e5e7eb; 
         }
 
+        p {
+              -webkit-user-select: none; /* Safari */
+              -ms-user-select: none; /* IE 10 and IE 11 */
+               user-select: none; /* Standard syntax */
+        }
+        
+        div {
+              -webkit-user-select: none; /* Safari */
+              -ms-user-select: none; /* IE 10 and IE 11 */
+               user-select: none; /* Standard syntax */
+        }
+
         .banner {
             width: 100%;
             height: 64px;
@@ -1061,6 +1073,7 @@ Last week I just completed my first week on IFP (International Foundation Progra
 </body>
 
 </html>
+
 
 
 
